[gd_scene load_steps=4 format=3 uid="uid://bpded4k5kx45m"]

[ext_resource type="Script" path="res://src/gui/slotSelection/slotSelection.gd" id="1_g6te1"]
[ext_resource type="Theme" uid="uid://bbvixcv2opc1q" path="res://src/resources/themes/mainMenuButtonLabelTheme.tres" id="1_qw8gh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_we6tr"]
bg_color = Color(1, 1, 1, 1)
border_width_top = 1

[node name="SlotSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_g6te1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_qw8gh")
theme_override_font_sizes/font_size = 32
text = "Select Save Slot"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_we6tr")

[node name="Control2" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 36
theme_override_constants/margin_bottom = 18

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Slot1" type="Control" parent="MarginContainer/Control2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="SlotCurrentChapter" type="Label" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot1/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qw8gh")
text = "SlotChapter"

[node name="SlotCollectibles" type="Label" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot1/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qw8gh")
text = "Collectibles x7"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="SlotPlaytime" type="Label" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot1/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_qw8gh")
text = "00:00:00"
horizontal_alignment = 2

[node name="SlotDeaths" type="Label" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot1/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_qw8gh")
text = "Deaths x1"
horizontal_alignment = 2

[node name="Control" type="Control" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Button" type="Button" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot1/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qw8gh")

[node name="Slot2" type="Control" parent="MarginContainer/Control2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="SlotCurrentChapter" type="Label" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qw8gh")
text = "SlotChapter"

[node name="SlotCollectibles" type="Label" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qw8gh")
text = "Collectibles x7"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="SlotPlaytime" type="Label" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_qw8gh")
text = "00:00:00"
horizontal_alignment = 2

[node name="SlotDeaths" type="Label" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_qw8gh")
text = "Deaths x1"
horizontal_alignment = 2

[node name="Control" type="Control" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Button" type="Button" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot2/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qw8gh")

[node name="Slot3" type="Control" parent="MarginContainer/Control2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="SlotCurrentChapter" type="Label" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot3/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qw8gh")
text = "SlotChapter"

[node name="SlotCollectibles" type="Label" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot3/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qw8gh")
text = "Collectibles x7"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="SlotPlaytime" type="Label" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot3/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_qw8gh")
text = "00:00:00"
horizontal_alignment = 2

[node name="SlotDeaths" type="Label" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot3/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_qw8gh")
text = "Deaths x1"
horizontal_alignment = 2

[node name="Control" type="Control" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Button" type="Button" parent="MarginContainer/Control2/MarginContainer/VBoxContainer/Slot3/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qw8gh")

[node name="Control3" type="Control" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control3"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 10

[node name="SlotSelectionReturnButton" type="Button" parent="MarginContainer/Control3/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qw8gh")
text = "Return"

[node name="SlotDeleteButton" type="Button" parent="MarginContainer/Control3/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qw8gh")
text = "Delete"

[connection signal="pressed" from="MarginContainer/Control3/HBoxContainer/SlotSelectionReturnButton" to="." method="_on_slot_selection_return_button_pressed"]
[connection signal="pressed" from="MarginContainer/Control3/HBoxContainer/SlotDeleteButton" to="." method="_on_slot_delete_button_pressed"]
